-Image Parsing *Fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-  <VideoView
+  <ImageView
       android:id="@+id/image_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginBottom="3dp"
-      android:layout_above="@+id/image_name"     />
+      android:layout_marginTop="50dp"
+      android:layout_above="@+id/image_name"
+      android:contentDescription="TODO" />
+
+  <com.google.android.material.button.MaterialButton
+      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:clickable="false"
+      android:layout_centerHorizontal="true"
+      android:layout_marginTop="10dp"
+      android:text="@string/apod"
+      android:textSize="24dp"
+      android:textColor="#6200ee" />
 
   <TextView
       android:id="@+id/image_name"
