--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorAccent">#FFFFFF</color>
+
+
+
+    <color name="startcolor">#4c74ff</color>
+    <color name="endcolor">#18a3fe</color>
+
+    <color name="tabcolor">#c0c0c0</color>
+    <color name="title">#000000</color>
+    <color name="description">#656565</color>
+
+
+
+
 </resources>
