--- a/app/src/main/res/layout/activity_apodinfo.xml
+++ b/app/src/main/res/layout/activity_apodinfo.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".APODinfo">
-
 
       <TextView
           android:id="@+id/text1"
           android:layout_width="390dp"
           android:layout_height="600dp"
           android:layout_centerInParent="true"
-          android:textSize="20dp"
-          android:textColor="@color/colorPrimaryDark"
-
-        >
-
+          android:textSize="20sp"
+          android:textColor="#6200EE">
 
       </TextView>
 
