--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
       android:layout_centerHorizontal="true"
       android:layout_marginTop="10dp"
       android:text="@string/apod"
-      android:textSize="24dp"
+      android:textSize="24sp"
       android:id="@+id/button1"
       android:textColor="#6200ee" />
 
@@ -38,9 +38,7 @@
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="7dp"
       android:textColor="#6200ee"
-      android:textSize="16dp" />
-
-
+      android:textSize="16sp" />
 
 
 </RelativeLayout>
