--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,36 +9,35 @@
   <ImageView
       android:id="@+id/image_view"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      android:layout_marginBottom="3dp"
-      android:layout_marginTop="50dp"
-      android:layout_above="@+id/image_name"
+      android:layout_height="350dp"
+      android:layout_alignParentStart="true"
       android:contentDescription="TODO"
-      android:layout_marginLeft="1dp"
-      android:layout_marginRight="1dp" />
+       />
 
-  <com.google.android.material.button.MaterialButton
-      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:clickable="true"
-      android:layout_centerHorizontal="true"
-      android:layout_marginTop="10dp"
-      android:text="@string/apod"
-      android:textSize="24sp"
-      android:id="@+id/button1"
-      android:textColor="#6200ee" />
 
   <TextView
-      android:id="@+id/image_name"
-      style="@style/Widget.MaterialComponents.Button.OutlinedButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_centerInParent="true"
-      android:layout_alignParentBottom="true"
-      android:layout_marginBottom="7dp"
+      android:layout_below="@id/image_view"
+      android:layout_marginLeft="10dp"
+      android:id="@+id/titletv"
       android:textColor="#6200ee"
-      android:textSize="16sp" />
+      android:textSize="16sp"
+      android:textStyle="bold">
+
+  </TextView>
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/titletv"
+      android:layout_marginLeft="10dp"
+      android:id="@+id/infotv"
+      android:textColor="#1b1b1b"
+      android:textSize="13sp">
+
+  </TextView>
+
+
 
 
 </RelativeLayout>
