--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:backgroundTint="@color/cardview_dark_background"
-        app:layout_anchor="@id/bar" />
+        app:layout_anchor="@id/bar"
+        app:srcCompat="@drawable/ic_calendar"/>
 
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
