--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,8 +53,6 @@
   </TextView>
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
-      xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
       android:id="@+id/drawer_layout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
@@ -61,15 +60,16 @@
     <!-- Other components and views -->
 
     <com.google.android.material.bottomappbar.BottomAppBar
+        app:menu="@menu/bar_menu"
         android:id="@+id/bar"
         style="@style/Widget.MaterialComponents.BottomAppBar"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:backgroundTint="#6200ee"
         app:fabAlignmentMode="end"
         app:fabAnimationMode="slide"
+
         app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -79,7 +79,7 @@
         android:layout_height="wrap_content"
         app:backgroundTint="@color/cardview_dark_background"
         app:layout_anchor="@id/bar"
-        app:srcCompat="@drawable/ic_calendar"/>
+        app:srcCompat="@drawable/ic_calendar" />
 
 
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
