--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="STORAGAE">
+    <item android:title="Screens">
         <menu>
-            <item android:title="@string/my_files"
+            <item android:title="@string/asteroids_neows"
                 android:icon="@drawable/ic_baseline_folder_24" />
-            <item android:title="@string/shared"
+            <item android:title="@string/epic"
                 android:icon="@drawable/ic_baseline_people_24" />
-            <item android:title="Starred"
+            <item android:title="@string/insight_mars_weather"
                 android:icon="@drawable/ic_baseline_star_24" />
-            <item android:title="Recent"
+            <item android:title="@string/mars_rover_photos"
                 android:icon="@drawable/ic_baseline_access_time_24" />
-            <item android:title="Backup"
-                android:icon="@drawable/ic_baseline_backup_24" />
         </menu>
     </item>
 
