--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -4,13 +4,18 @@
     <item android:title="Screens">
         <menu>
             <item android:title="@string/asteroids_neows"
-                android:icon="@drawable/ic_baseline_folder_24" />
+                android:icon="@drawable/ic_baseline_folder_24"
+                android:id="@+id/asteroids_neows"/>
             <item android:title="@string/epic"
-                android:icon="@drawable/ic_baseline_people_24" />
+                android:icon="@drawable/ic_baseline_people_24"
+                android:id="@+id/epic"
+                />
             <item android:title="@string/insight_mars_weather"
-                android:icon="@drawable/ic_baseline_star_24" />
+                android:icon="@drawable/ic_baseline_star_24"
+                android:id="@+id/insight_mars_weather" />
             <item android:title="@string/mars_rover_photos"
-                android:icon="@drawable/ic_baseline_access_time_24" />
+                android:icon="@drawable/ic_baseline_access_time_24"
+                android:id="@+id/mars_rover_photos"/>
         </menu>
     </item>
 
