--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -55,10 +55,10 @@
 
     <ImageView
         android:id="@+id/intro_img"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="222dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="100dp"
         android:layout_centerInParent="true"
         tools:srcCompat="@tools:sample/avatars" />
 
