Homepage *Homepage image fix *Design fix

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 
-<RelativeLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,27 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="1000dp"
-    android:orientation="vertical" >
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
   <RelativeLayout
       android:layout_width="match_parent"
-      android:layout_height="900dp">
+      android:layout_height="match_parent">
 
 
+    <ImageView
 
-  <ImageView
-      android:id="@+id/image_view"
-      android:layout_width="match_parent"
-      android:layout_height="350dp"
-      android:layout_alignParentStart="true"
-      android:contentDescription="TODO"
-       />
+        android:id="@+id/image_view"
+        android:layout_marginTop="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        android:contentDescription="TODO"
+         />
 
-  <TextView
+    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/image_view"
@@ -60,19 +60,30 @@
       android:textStyle="bold">
   </TextView>
 
-</RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/datetv"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="2dp"
+        android:text="TEST"
+
+        android:textColor="#1b1b1b"
+        android:textSize="50dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        tools:visibility="invisible"></TextView>
+
+  </RelativeLayout>
 
 
 
 </ScrollView>
 
 
-  <androidx.coordinatorlayout.widget.CoordinatorLayout
-      android:id="@+id/drawer_layout"
-      android:layout_width="match_parent"
-      android:layout_height="match_parent">
 
-    <!-- Other components and views -->
 
     <com.google.android.material.bottomappbar.BottomAppBar
         app:menu="@menu/bar_menu"
@@ -103,5 +114,3 @@
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
-
-</RelativeLayout>
