--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,7 @@
 
 <ScrollView
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
   <RelativeLayout
       android:layout_width="match_parent"
@@ -20,12 +19,11 @@
     <ImageView
 
         android:id="@+id/image_view"
-        android:layout_marginTop="3dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="3dp" />
 
-        android:contentDescription="TODO"
-         />
+
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
@@ -84,7 +82,7 @@
         android:text="TEST"
 
         android:textColor="#1b1b1b"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold"
         android:visibility="invisible"
         tools:visibility="invisible"></TextView>
@@ -95,7 +93,13 @@
 
 </ScrollView>
 
-
+  <ProgressBar
+      style="?android:attr/progressBarStyle"
+      android:id="@+id/mprogressbar"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center">
+  </ProgressBar>
 
 
     <com.google.android.material.bottomappbar.BottomAppBar
