--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,9 @@
     <color name="description">#656565</color>
 
 
+<style name="progresstheme">
 
+    <item name="colorPrimary">@color/colorPrimary</item>
+</style>
 
 </resources>
