Homepage *Click for HD option *Margin for imageTitle

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,15 +39,15 @@
     </com.google.android.material.button.MaterialButton>
 
     <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_below="@id/image_view"
-      android:layout_marginLeft="10dp"
-      android:id="@+id/titletv"
-      android:textColor="#6200ee"
-      android:textSize="16sp"
-      android:textStyle="bold">
-  </TextView>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/image_view"
+        android:layout_marginLeft="10dp"
+        android:id="@+id/titletv"
+        android:layout_marginTop="2dp"
+        android:textColor="#6200ee"
+        android:textSize="16sp"
+        android:textStyle="bold"></TextView>
 
   <TextView
       android:layout_width="wrap_content"
