--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -13,7 +13,9 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_linkedin"
-        app:backgroundTint="#ffffff"></com.google.android.material.floatingactionbutton.FloatingActionButton>
+        app:backgroundTint="#ffffff">
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/iki"
@@ -24,8 +26,12 @@
         android:layout_marginRight="10dp"
         android:layout_toLeftOf="@id/bir"
         android:src="@drawable/ic_twitter"
+        app:backgroundTint="#FFFFFF"
 
-        app:backgroundTint="#ffffff"></com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+        >
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/uc"
@@ -36,7 +42,9 @@
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/bir"
         android:src="@drawable/ic_stack_overflow"
-        app:backgroundTint="#ffffff"></com.google.android.material.floatingactionbutton.FloatingActionButton>
+        app:backgroundTint="#ffffff">
+
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     <com.google.android.material.textview.MaterialTextView
         android:layout_width="wrap_content"
