--- a/app/src/main/res/layout/activity_asteroids_neows.xml
+++ b/app/src/main/res/layout/activity_asteroids_neows.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context="com.example.DiscoverTheUniverse.asteroids_neows">
+    tools:context="com.example.DiscoverTheUniverse.NavigationUI.asteroids_neows">
 
     <TextView
         android:id="@+id/neowstitle"
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="50dp"
-        android:text="Near Earth Objects:"
+        android:fontFamily="casual"
+        android:text="@string/near_earth_objects"
         android:textColor="#ffffff"
         android:textSize="30sp" />
 
@@ -24,9 +25,10 @@
         android:layout_below="@id/neowstitle"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="5dp"
+        android:fontFamily="casual"
         android:gravity="start"
-        android:textColor="#ffffff"
 
+        android:textColor="#ffffff"
         android:textSize="65sp" />
 
     <com.airbnb.lottie.LottieAnimationView
