--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,34 +16,46 @@
       android:layout_height="match_parent">
 
 
-    <ImageView
+      <ImageView
 
-        android:id="@+id/image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="3dp" />
-
-    <ImageView
-
-        android:id="@+id/image_view2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="3dp"
-        android:visibility="invisible" />
+          android:id="@+id/image_view"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginTop="3dp" />
 
 
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:text="Click to Watch"
-        android:textAllCaps="false"
-        android:visibility="invisible"
-        android:id="@+id/mvideobutton">
+      <com.google.android.material.floatingactionbutton.FloatingActionButton
+          android:id="@+id/addfavorites"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_above="@+id/titletv"
+          android:layout_alignParentEnd="true"
+          app:backgroundTint="#FFFFFF">
+
+      </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 
-    </com.google.android.material.button.MaterialButton>
+      <ImageView
+
+          android:id="@+id/image_view2"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginTop="3dp"
+          android:visibility="invisible" />
+
+
+      <com.google.android.material.button.MaterialButton
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerHorizontal="true"
+          android:layout_alignParentBottom="true"
+          android:text="Click to Watch"
+          android:textAllCaps="false"
+          android:visibility="invisible"
+          android:id="@+id/mvideobutton">
+
+
+      </com.google.android.material.button.MaterialButton>
 
     <TextView
         android:layout_width="wrap_content"
@@ -96,8 +108,6 @@
 
   </RelativeLayout>
 
-
-
 </ScrollView>
 
   <ProgressBar
@@ -125,16 +135,16 @@
 
         app:navigationIcon="@drawable/ic_menu_black_24dp" />
 
-  <com.google.android.material.floatingactionbutton.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
 
-      android:id="@+id/fab"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      app:backgroundTint="@color/cardview_light_background"
-      app:layout_anchor="@id/bar"
-      app:srcCompat="@drawable/ic_calendaryeni" />
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/cardview_light_background"
+        app:layout_anchor="@id/bar"
+        app:srcCompat="@drawable/ic_calendaryeni" />
 
 
-  </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
