--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     android:layout_height="match_parent">
 
   <RelativeLayout
+      android:id="@+id/mrelativelayout"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
@@ -24,19 +25,24 @@
           android:layout_marginTop="3dp" />
 
 
-      <com.google.android.material.floatingactionbutton.FloatingActionButton
+      <ToggleButton
           android:id="@+id/addfavorites"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
+          android:layout_width="25dp"
+          android:layout_height="25dp"
           android:layout_above="@+id/titletv"
           android:layout_alignParentEnd="true"
-          app:backgroundTint="#FFFFFF">
+          android:layout_marginRight="8dp"
+          android:background="@drawable/selector"
+          android:textOff=""
+          android:textOn=""
 
-      </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+          >
+
+      </ToggleButton>
 
 
       <ImageView
-
           android:id="@+id/image_view2"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
