--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -1,71 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff">
 
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_anchor="@+id/relativeLayout"
-        app:layout_anchorGravity="center">
+    <ImageView
+        android:id="@+id/intro_img"
+        android:layout_width="300dp"
+        android:layout_height="222dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
+        android:visibility="visible"
+        tools:srcCompat="@tools:sample/avatars" />
 
-        <ImageView
-            android:id="@+id/intro_img"
-            android:visibility="visible"
-            android:layout_width="300dp"
-            android:layout_height="222dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="100dp"
-            tools:srcCompat="@tools:sample/avatars" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/intro_img2"
+        android:layout_width="300dp"
+        android:layout_height="222dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="100dp"
+        android:visibility="visible"
+        tools:srcCompat="@tools:sample/avatars" />
 
-
-    </RelativeLayout>
 
     <TextView
         android:id="@+id/intro_description"
-        android:layout_width="228dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-
-        android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
-        android:layout_marginBottom="320dp"
-        android:lineSpacingExtra="16dp"
+        android:layout_below="@+id/intro_title"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="-252dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:text="TextView"
 
-        app:layout_anchorGravity="bottom|center"
-        android:textAlignment="center"
-        app:layout_anchor="@+id/relativeLayout"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.13" />
+        android:textSize="24sp" />
 
     <TextView
         android:id="@+id/intro_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_below="@+id/intro_img"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="250dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:text="TextView"
-        android:textColor="@color/title"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_anchor="@+id/relativeLayout"
-        app:layout_anchorGravity="center" />
+        android:textSize="28sp"
+        android:textStyle="bold" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
